# skeletal_animation_2d_remake

./: .gitignore  Cargo.toml  Readme.md  index.html  load-animations.js  skeletal-animation-2D-editor.d.ts  skeletal-animation-2D-editor.js  skeletal-animation-2D-editor_bg.wasm.d.ts
anims/: animation_0.anim  animation_0.json  animation_1.json  animation_2.json  animation_3.json  animation_4.json  animation_5.anim  animation_5.json  animation_6.json  animation_7.json  animation_9.json
anims - old/: animation_0.anim.anim  animation_1.anim  animation_2.anim  animation_2.anim.anim  animation_5.anim.anim  animation_6.anim.anim  animation_7.anim.anim  pooh_different_functions.anim
anims_backup/: animation_0.json  animation_1.json  animation_2.json  animation_3.anim  animation_4.json  animation_5.json  animation_6.anim  animation_6.json  animation_7.anim  animation_7.json  animation_8.anim  animation_8.json  animation_9.anim  animation_9.json
assets/: spider_person.xcf
assets/anims - Kopie/: animation_0.anim  animation_3.anim.anim  (+2 more)
src/: animation.rs  bevy_ui.rs  bone.rs  bones.rs  ccd.rs  cloth.rs  cursor.rs  debug.rs  egui.rs  image.rs  interpolate.rs  inverse_kinematics.rs  kinematic_chain.rs  main.rs  mesh.rs  mesh_gen.rs  misc.rs  save_load.rs  setup.rs  skeleton.rs  skin.rs  state.rs  transform.rs
thesis/: -.bib  abschlussarbeit.aux  abschlussarbeit.bbl  abschlussarbeit.bcf  abschlussarbeit.bib  abschlussarbeit.bib.bak  abschlussarbeit.blg  abschlussarbeit.lof  abschlussarbeit.out  abschlussarbeit.run.xml  abschlussarbeit.tex  abschlussarbeit.toc
(+68 files in other folders)
