[package]
name = "bevy-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy_prototype_debug_lines = "0.7.2"
image = "0.24.2"
distance-field = "0.1.7"
lyon = "1.0.0"
triangle-rs = "0.1.2"