[package]
name = "skeletal-animation-2D-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy_prototype_debug_lines = "0.8.0"
bevy_egui = "0.16.1"
image = "0.24.2"
distance-field = "0.2.0"
lyon = "1.0.0"
bevy_prototype_lyon = "0.6.0"
serde = "1.0.143"
serde_json = "1.0.83"
bevy_pkv = "0.5.0"
bevy_common_assets = {version="0.3.0", features=["json"]}
wasm-bindgen = "0.2.83"
web-sys = {version="0.3.60", features=["Document", "Window", "Element", "Event", "Storage"]}
js-sys = "0.3.60"
spade = "2.0.0"
geo = "0.23.0"